# 6869_nerf

./: .env  .gitmodules  Dockerfile  iNERF_Synthetic_Plots.ipynb  pyproject.toml  run_inerf.py  run_inerf_helpers.py  run_posenet.py  slurm_run_container.sh  utils.py  vis.py
configs/: fern.txt  lego.txt
configs/llff/: fern.txt  flower.txt  fortress.txt  horns.txt  leaves.txt  orchids.txt  trex.txt
configs/synthetic/: chair.txt  drums.txt  ficus.txt  hotdog.txt  materials.txt  mic.txt  ship.txt
logs/blender_paper_chair/results_bs1024_feature_regions/: results.npy
logs/blender_paper_chair/results_bs1024_random/: results.npy
logs/blender_paper_chair/results_bs256_feature_regions/: results.npy
logs/blender_paper_chair/results_bs256_random/: results.npy
logs/blender_paper_drums/results_bs1024_feature_regions/: results.npy
logs/blender_paper_drums/results_bs1024_random/: results.npy
logs/blender_paper_drums/results_bs256_feature_regions/: results.npy
logs/blender_paper_drums/results_bs256_random/: results.npy
logs/blender_paper_ficus/results_bs1024_feature_regions/: results.npy
logs/blender_paper_ficus/results_bs1024_random/: results.npy
logs/blender_paper_ficus/results_bs256_feature_regions/: results.npy
logs/blender_paper_ficus/results_bs256_random/: results.npy
logs/blender_paper_mic/results_bs1024_feature_regions/: results.npy
logs/blender_paper_mic/results_bs1024_random/: results.npy
logs/blender_paper_mic/results_bs256_feature_regions/: results.npy
logs/blender_paper_mic/results_bs256_random/: results.npy
(+20 files in other folders)
