[tool.poetry]
name = "6869_nerf"
version = "0.1.0"
description = ""
authors = ["dxy <daniel.yang17@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
numpy = "^1.20.1"
scipy = "^1.6.1"
opencv-python = "^4.5.1"
matplotlib = "^3.3.4"
jupyter = "^1.0.0"
torch = "1.8.1"
torchvision = "0.9.1"
torchaudio = "0.8.1"
jupyterlab = "^3.0.9"
tqdm = "^4.59.0"
image = "^1.5.33"
Pillow = "^8.2.0"
tensorboard = "^2.5.0"
imageio = "^2.9.0"
imageio-ffmpeg = "^0.4.3"
torchsearchsorted = {path = "nerf-pytorch/torchsearchsorted"}
ConfigArgParse = "^1.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
